tests/baselines/reference/symbolDeclarationEmit12.errors.txt
tests/cases/conformance/es6/Symbols/symbolDeclarationEmit12.ts(5,9): error TS2718: Duplicate declaration '[Symbol.toPrimitive]'.
tests/cases/conformance/es6/Symbols/symbolDeclarationEmit12.ts(9,13): error TS2718: Duplicate declaration '[Symbol.toPrimitive]'.
tests/cases/conformance/es6/Symbols/symbolDeclarationEmit12.ts(10,13): error TS2718: Duplicate declaration '[Symbol.toPrimitive]'.


==== tests/cases/conformance/es6/Symbols/symbolDeclarationEmit12.ts (3 errors) ====
    module M {
        interface I { }
        export class C {
            [Symbol.iterator]: I;
            [Symbol.toPrimitive](x: I) { }
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2718: Duplicate declaration '[Symbol.toPrimitive]'.
            [Symbol.isConcatSpreadable](): I {
                return undefined
            }
            get [Symbol.toPrimitive]() { return undefined; }
                ~~~~~~~~~~~~~~~~~~~~
!!! error TS2718: Duplicate declaration '[Symbol.toPrimitive]'.
            set [Symbol.toPrimitive](x: I) { }
                ~~~~~~~~~~~~~~~~~~~~
!!! error TS2718: Duplicate declaration '[Symbol.toPrimitive]'.
        }
    }